# dc-circuit-analyzer

./: CMakeLists.txt  README.md
examples/: simple.netlist
include/: MatrixBuilder.h  Node.h  Parser.h  Resistor.h  VoltageSource.h  solver.h
src/: MatrixBuilder.cpp  Node.cpp  Parser.cpp  Resistor.cpp  VoltageSource.cpp  main.cpp  solver.c
